--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql = false
 hibernate.format_sql = false
+riot.api.key = c08236ae-d093-4c4e-978f-96fe66140466
