--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>4.1.6.RELEASE</spring.version>
-        <hibernate.version>4.3.10.Final</hibernate.version>
+        <spring.version>4.3.5.RELEASE</spring.version>
+        <hibernate.version>5.2.5.Final</hibernate.version>
         <jstl.version>1.2</jstl.version>
         <javax.servlet.version>3.0.1</javax.servlet.version>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -111,11 +111,11 @@
             <version>${hibernate.version}</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>  
             <groupId>javax.servlet</groupId>  
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.31</version>
+            <version>6.0.5</version>
         </dependency>
         
         <dependency>
