--- a/package.json
+++ b/package.json
@@ -68,15 +68,16 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "@angular/common": "2.4.6",
-    "@angular/compiler": "2.4.6",
-    "@angular/core": "2.4.6",
-    "@angular/forms": "2.4.6",
-    "@angular/http": "2.4.6",
-    "@angular/platform-browser": "2.4.6",
-    "@angular/platform-browser-dynamic": "2.4.6",
-    "@angular/platform-server": "2.4.6",
-    "@angular/router": "3.4.6",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
@@ -86,12 +87,12 @@
     "jasmine-core": "^2.5.2",
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.2",
-    "zone.js": "0.7.6"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.4.6",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/hammerjs": "^2.0.33",
-    "@types/jasmine": "^2.2.34",
+    "@types/jasmine": "2.5.45",
     "@types/node": "^7.0.0",
     "@types/selenium-webdriver": "~2.53.39",
     "@types/source-map": "^0.5.0",
@@ -124,7 +125,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "2.0.1",
     "ng-router-loader": "^2.1.0",
-    "ngc-webpack": "1.1.0",
+    "ngc-webpack": "^1.2.0",
     "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.1",
     "optimize-js-plugin": "0.0.4",
@@ -143,9 +144,9 @@
     "tslint": "~4.5.1",
     "tslint-loader": "^3.3.0",
     "typedoc": "^0.5.3",
-    "typescript": "~2.2.1",
+    "typescript": "^2.2.1",
     "url-loader": "^0.5.7",
-    "webpack": "2.2.0",
+    "webpack": "2.3.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "2.4.1",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
