--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/loltheory
+jdbc.url = jdbc:mysql://localhost:3306/statikk
 jdbc.username = web_chores
 jdbc.password = S1r_cho0res^4L0T
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
