Renaming com.njin.loltheory to statikk

--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.njin</groupId>
-    <artifactId>loltheoryminer</artifactId>
+    <groupId>statikk</groupId>
+    <artifactId>statikk-data-miner</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -149,8 +149,8 @@
         </dependency>
         
         <dependency>
-            <groupId>com.njin</groupId>
-            <artifactId>loltheory</artifactId>
+            <groupId>statikk</groupId>
+            <artifactId>statikk-framework</artifactId>
             <version>1.0-SNAPSHOT</version>            
         </dependency>
     </dependencies>
