--- a/data-miner/src/main/resources/application.properties
+++ b/data-miner/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/statikk
 spring.datasource.username=web_chores
 spring.datasource.password=S1r_cho0res^4L0T
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.main.web-environment=false
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=create-drop
-hibernate.show_sql = false
+hibernate.show_sql = true
 hibernate.format_sql = false
-riot.api.key = RGAPI-de191811-81fc-46ff-94da-85174179fccd
+riot.api.key = RGAPI-a4c01414-0204-4079-a410-7be80bd19180
