--- a/web-api/pom.xml
+++ b/web-api/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <name>web-api</name>
-    <description>Statikk application data domain</description>
+    <description>Statikk application web api</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
