--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,12 +14,15 @@ pipelines:
         script:
           - apt-get update
           - apt-get install -y zip
+          - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          - dpkg -i --force-depends google-chrome-stable_current_amd64.deb
+          - apt-get install -f
           - mvn -B verify # -B batch mode makes Maven less verbose
           - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"data-miner/target/data-miner-0.0.1-SNAPSHOT.jar"
           - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"web-api/target/web-api-0.0.1-SNAPSHOT.jar"
           - cd web-app
           - npm install
-          - npm test
+          - npm run test:ci
           - npm build
           - zip -r statikk.zip dist
           - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"statikk.zip"
