--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "test:ci": "ng test --browsers ChromeHeadless",
+    "test:ci": "ng test --browsers ChromeHeadless --single-run",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
