--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -26,6 +26,6 @@ pipelines:
           - cd web-app
           - npm install
           - npm run test:ci
-          - npm build
+          - npm run build
           - zip -r statikk.zip dist
           - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"statikk.zip"
