--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,9 +8,15 @@ image: jimador/docker-jdk-8-maven-node
 pipelines:
   default:
     - step:
-        caches:
+        script:
+          echo "Build not run for unimportant branches"
+  branches:
+    master:
+      - step:
+          caches:
           - maven
-          - node
+          - node_modules
+          - chrome
         script:
           - apt-get update; apt-get install -y gettext-base;
           - echo 'deb http://dl.google.com/linux/chrome/deb/ stable main' > /etc/apt/sources.list.d/chrome.list
@@ -29,3 +35,31 @@ pipelines:
           - npm run build
           - zip -r statikk.zip dist
           - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"statikk.zip"
+    feature/*:
+      - step:
+          caches:
+          - maven
+          - node_modules
+          - chrome
+        script:
+          - apt-get update; apt-get install -y gettext-base;
+          - echo 'deb http://dl.google.com/linux/chrome/deb/ stable main' > /etc/apt/sources.list.d/chrome.list
+          - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+          - set -x && apt-get update && apt-get install -y xvfb google-chrome-stable
+          - wget -q -O /usr/bin/xvfb-chrome https://bitbucket.org/atlassian/docker-node-chrome-firefox/raw/ff180e2f16ea8639d4ca4a3abb0017ee23c2836c/scripts/xvfb-chrome
+          - ln -sf /usr/bin/xvfb-chrome /usr/bin/google-chrome
+          - chmod 755 /usr/bin/google-chrome
+          - apt-get install -y zip
+          - mvn -B verify # -B batch mode makes Maven less verbose
+          - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"data-miner/target/data-miner-0.0.1-SNAPSHOT.jar"
+          - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"web-api/target/web-api-0.0.1-SNAPSHOT.jar"
+          - cd web-app
+          - npm install
+          - npm run test:ci
+          - npm run build
+          - zip -r statikk.zip dist
+          - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"statikk.zip"
+definitions:
+  caches:
+    node_modules: web-app/node_modules
+    chrome: ~/usr/bin/google-chrome
