--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,7 +27,7 @@ pipelines:
           - cd web-app
           - npm install
           - npm run test:ci
-          - npm run build
+          - npm run build:prod
           - zip -r statikk.zip dist
           - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"statikk.zip"
     feature/*:
@@ -51,7 +51,7 @@ pipelines:
           - cd web-app
           - npm install
           - npm run test:ci
-          - npm run build
+          - npm run build:prod
           - zip -r statikk.zip dist
           - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/statikk/statikk/downloads" --form files=@"statikk.zip"
 definitions:
