--- a/web-app/package.json
+++ b/web-app/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod --env=prod",
     "test": "ng test",
     "test:ci": "ng test --browsers ChromeHeadless --single-run",
     "lint": "ng lint",
