--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,8 +7,8 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --prod --env=prod",
-    "test": "ng test",
-    "test:ci": "ng test --browsers ChromeHeadless --single-run",
+    "test": "ng test  --sourcemap=false",
+    "test:ci": "ng test --browsers ChromeHeadless --single-run  --sourcemap=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
