--- a/data-miner/src/main/resources/application.properties
+++ b/data-miner/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.main.web-environment=false
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=create-drop
-hibernate.show_sql = true
+hibernate.show_sql = false
 hibernate.format_sql = false
