--- a/domain/src/main/resources/application.properties
+++ b/domain/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=S1r_cho0res^4L0T
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=create-drop
-hibernate.show_sql = true
+hibernate.show_sql = false
 hibernate.format_sql = false
