--- a/web-api/src/main/resources/application.properties
+++ b/web-api/src/main/resources/application.properties
@@ -6,3 +6,4 @@ hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql = false
 hibernate.format_sql = false
+debug=false
